@@ -436,7 +436,7 @@ perform_setup(struct daemon* daemon, struct config_file* cfg, int debug_mode,
 				fatal_exit("failed to set tls-cipher %s", cfg->tls_ciphers);
 			}
 		}
-#if OPENSSL_VERSION_NUMBER >= 0x1010101
+#ifdef HAVE_SSL_CTX_SET_CIPHERSUITES
 		if(cfg->tls_ciphersuites && cfg->tls_ciphersuites[0]) {
 			if (!SSL_CTX_set_ciphersuites(daemon->listen_sslctx, cfg->tls_ciphersuites)) {
 				fatal_exit("failed to set tls-ciphersuites %s", cfg->tls_ciphersuites);
