@@ -2,6 +2,8 @@
 	- Patch from Manabu Sonoda with tls-ciphers and tls-ciphersuites
 	  options for unbound.conf.
 	- Fixes for the patch, and man page entry.
+	- Fix configure to detect SSL_CTX_set_ciphersuites, for better
+	  library compatibility when compiling.
 
 22 January 2018: Wouter
 	- Fix space calculation for tcp req buffer size.
